--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-ace": "^9.5.0",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
+    "react-icons": "^4.3.1",
+    "react-media-recorder": "^1.6.3",
+    "react-resizable": "^3.0.4",
     "react-scripts": "4.0.3",
+    "react-webcam": "^6.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
