--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-icons": "^4.3.1",
+    "react-iframe": "^1.8.0",
     "react-media-recorder": "^1.6.3",
     "react-resizable": "^3.0.4",
     "react-scripts": "4.0.3",
